# sfparticles

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
exampl;e/: dev.py
example/: cascade.py  dev.py  trajectory.py
sfparticles/: __init__.py  cpu.py  fields.py  gpu.py  inline.py  particles.py  qed.py  simulation.py
sfparticles/qed/: __init__.py  optical_depth.py  optical_depth_tables.py  rejection_sampling.py  rejection_sampling_tables.h5  rejection_sampling_tables.py  tables.h5  tables.py
tests/: test_particles.py  test_pusher.py  test_qed.py  test_qed_optical_depth.py  test_tables.py
